<resources>
    <string name="app_name">CrowdSync</string>
    <string name="Login">Login</string>
    <string name="Welcome">Welcome !</string>
    <string name="google">Sign in With Google</string>
    <string name="dontHaveAccount">"Don't have an account?"</string>
    <string name="or">OR</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="splash">CrowdSync</string>
    <string name="Skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Messages</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notifications">Notifications</string>
</resources>
