<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/offDarkOrange"
        android:textSize="50sp"
        android:fontFamily="@font/julius_sans_one"
        android:layout_above="@id/name"
        android:layout_alignStart="@id/name"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:layout_margin="15dp"
        android:background="@drawable/edittext"
        android:textColorHint="@color/DimGray"
        android:autofillHints="Enter Phone Number" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:layout_above="@id/phone"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:background="@drawable/edittext"
        android:textColorHint="@color/DimGray"
        android:autofillHints="@string/enter_email_address" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:background="@drawable/edittext"
        android:textColorHint="@color/DimGray"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/phone"
        android:layout_margin="15dp"
        android:autofillHints="@string/enter_password" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:background="@drawable/edittext"
        android:textColorHint="@color/DimGray"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:autofillHints="@string/confirm_password" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/DimGray"
        android:autofillHints="@string/enter_name" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_margin="20dp"

        android:layout_below="@id/confirmpassword"
        android:layout_centerHorizontal="true"
        android:width="150dp"
        android:background="@drawable/sigupbutton"
        android:textSize="20sp"
        android:textColor="@color/White"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="36dp"
        android:text="@string/already_have_an_account"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="36dp"
        android:layout_toEndOf="@id/textView6"
        android:text="@string/Login"
        android:textColor="@color/offDarkOrange"
        android:textSize="17sp" />

</RelativeLayout>